--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">App</a>
   <button class="navbar-toggler" type="button" (click)="toggleNavBar()"
           data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,11 +9,15 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" [ngClass]="{'show': navBarOpen}">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+        <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">News</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Profile</a>
+      </li>
+
       <li class="nav-item dropdown">
         <div class="dropdown-menu " aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
