--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">App</a>
+  <a class="navbar-brand" routerLink="/">App</a>
   <button class="navbar-toggler" type="button" (click)="toggleNavBar()"
           data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,13 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" [ngClass]="{'show': navBarOpen}">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">News</a>
+        <a class="nav-link" routerLink="/news" routerLinkActive="active">News</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Profile</a>
+        <a class="nav-link" routerLink="/profile" routerLinkActive="active">Profile</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -28,6 +28,11 @@
       </li>
     </ul>
 
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign in</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/login" type="submit">Sign in</button>
   </div>
 </nav>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
