--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary header">
   <a class="navbar-brand" routerLink="/">App</a>
   <button class="navbar-toggler" type="button" (click)="toggleNavBar()"
           data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -28,7 +28,7 @@
       </li>
     </ul>
 
-      <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/login" type="submit">Sign in</button>
+      <button class="btn btn-outline-light my-2 my-sm-0" routerLink="/login" type="submit">Sign in</button>
   </div>
 </nav>
 
