--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,1 +1,24 @@
-<p>login-page works!</p>
+<form class="form" [formGroup]="form" (ngSubmit)="submit()">
+  <div class="form-group">
+
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email"
+           [ngClass]="{'is-invalid': form.get('email').invalid && form.get('email').touched,
+                       'is-valid': form.get('email').valid}">
+    <div class="invalid-feedback">
+      Invalid email address
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" formControlName="password"
+           [ngClass]="{'is-invalid': form.get('password').invalid && form.get('password').touched,
+                       'is-valid': form.get('password').valid}">
+    <div class="invalid-feedback">
+      Password must be 5 characters at minimum
+    </div>
+
+  </div>
+  <button type="submit" class="btn btn-primary btnCursor" [disabled]="form.invalid" >Submit</button>
+</form>
