added spinner, httpWrapperService,

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,3 +37,10 @@
   <router-outlet></router-outlet>
 </div>
 
+
+<div *ngIf="spinnerStatus" class="spinnerWrapper d-flex justify-content-center align-items-center">
+  <div class="spinner-border text-primary spinner text-warning" >
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+
