--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,18 @@
 .header {
   font-size: 18px;
 }
+
+.spinnerWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  opacity: .3;
+
+  .spinner {
+    width: 10rem;
+    height: 10rem;
+  }
+}
