--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,9 @@
   bottom: 0;
   background-color: #000000;
   opacity: .3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .spinner {
     width: 10rem;
