--- a/src/app/news-page/news-page.component.html
+++ b/src/app/news-page/news-page.component.html
@@ -1,1 +1,9 @@
-<p>news-page works!</p>
+<div class="cards">
+  <div *ngFor="let article of articles" class="newsCard card border-primary mb-3">
+    <div class="card-header">{{article.source.name}}</div>
+    <div class="card-body text-primary">
+      <h5 class="card-title">{{article.title}}</h5>
+      <p class="card-text">{{article.content}}</p>
+    </div>
+  </div>
+</div>
