added some information in home-page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,10 @@
-<p>home-page works!</p>
+<div class="homeCard">
+  <div class="card text-center">
+    <div class="card-body">
+      <h5 class="card-title">Welcome</h5>
+      <p class="card-text">On this site you can watch the news. Click on the link below.</p>
+      <button class="btn btn-primary" routerLink="/news">Click me</button>
+    </div>
+  </div>
+</div>
+
