--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -1,1 +1,6 @@
-<p>profile-page works!</p>
+<div class="profileCard card text-white bg-danger mb-3 text-center">
+  <div class="card-body">
+    <h5 class="card-title">Attention!</h5>
+    <p class="card-text">This page is available only to registered users.</p>
+  </div>
+</div>
