--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
   <router-outlet></router-outlet>
 </div>
 
-
-<div class="spinnerWrapper" [hidden]="!spinnerStatus">
+<div class="backDrop spinnerWrapper" [hidden]="!spinnerStatus">
   <div class="spinner-border text-primary spinner text-warning" >
     <span class="sr-only">Loading...</span>
   </div>
 </div>
+
 
