--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+.backDrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .3);
+}
+
 .btnCursor {
   &[disabled] {
     cursor: no-drop;
